--- a/app9.json
+++ b/app9.json
@@ -5,7 +5,7 @@
     "submenu": "",
     "tabs": [
       {
-        "title": "Flirt Deutschland",
+        "title": "Singles in der Nähe",
         "provider": "webview",
         "arguments": [
           "https://www.awin1.com/cread.php?awinmid=18366&awinaffid=625033&clickref=seo",
@@ -13,7 +13,7 @@
         ]
       },
       {
-        "title": "Singles in der nähe",
+        "title": "Kostenlos flirten",
         "provider": "webview",
         "arguments": [
           "https://instaquiz.app/tracking/partnersuche-dating-deutschland-cdate.html",
